# agent-after-dark

./: .gitignore  README.md
.adk/artifacts/users/user/sessions/5a530c32-ac3c-4bdc-8ebf-52e782bb8ea8/artifacts/user_uploaded_img_f18b6869b37abd02.jpeg/versions/0/: metadata.json
.adk/artifacts/users/user/sessions/783c6388-5786-4eee-9981-742a17fae743/artifacts/gordon_ramsay's_modern_tomato_&_basil_bruschetta_recipe.pdf/versions/0/: metadata.json
.adk/artifacts/users/user/sessions/783c6388-5786-4eee-9981-742a17fae743/artifacts/user_uploaded_img_f18b6869b37abd02.jpeg/versions/0/: metadata.json
.adk/artifacts/users/user/sessions/ac184429-6b46-4d7f-96a9-a9f401078132/artifacts/user_uploaded_img_a7012a223c436f18.jpeg/versions/0/: metadata.json
recipe-agent/: LICENSE  pyproject.toml
recipe-agent/recipe_agent/: .env.example  prompts.py  tools.py
recipe_agent/: agent.py  callbacks.py  config.py  requirements.txt
