[project]
name = "agent-after-dark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.21.0",
    "google-cloud-aiplatform>=1.132.0",
    "google-genai>=1.56.0",
    "pillow>=12.1.0",
    "python-dotenv>=1.2.1",
    "reportlab>=4.4.7",
]
